[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/enemyBlack2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/EnemyThruster.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/shield3.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 4.0

[node name="Enemy" type="Area2D" groups=["Enemies"]]
script = ExtResource( 2 )
drop_speed = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemies"]]
shape = SubResource( 1 )

[node name="ThrusterSprite" parent="." instance=ExtResource( 3 )]
position = Vector2( -7, -46 )
frame = 3

[node name="ResShield" type="Sprite" parent="."]
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="RefireTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BabySpawnTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="RefireTimer" to="." method="_on_RefireTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
